# mm_email_client

./: .gitignore  CMakeLists.txt  README.md  accounts.c  accounts.h  homemenu.h  main.c  menus.c  menus.h  smtp.c  smtp.h
